--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "jest": "^24.9.0",
     "nock": "^12.0.3",
     "nodemon": "^1.18.7",
-    "prettier": "^1.19.1",
+    "prettier": "1.19.1",
     "supertest": "^4.0.2"
   }
 }
